// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollSnapMarginRight renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-right: 0;
  -moz-scroll-snap-margin-right: 0;
  -ms-scroll-snap-margin-right: 0;
  scroll-snap-margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: 0;
  -moz-scroll-snap-margin-right: 0;
  -ms-scroll-snap-margin-right: 0;
  scroll-snap-margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: 0;
  -moz-scroll-snap-margin-right: 0;
  -ms-scroll-snap-margin-right: 0;
  scroll-snap-margin-right: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: 0;
  -moz-scroll-snap-margin-right: 0;
  -ms-scroll-snap-margin-right: 0;
  scroll-snap-margin-right: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-right: hasnot;
  -moz-scroll-snap-margin-right: hasnot;
  -ms-scroll-snap-margin-right: hasnot;
  scroll-snap-margin-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: has;
  -moz-scroll-snap-margin-right: has;
  -ms-scroll-snap-margin-right: has;
  scroll-snap-margin-right: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: hasnot;
  -moz-scroll-snap-margin-right: hasnot;
  -ms-scroll-snap-margin-right: hasnot;
  scroll-snap-margin-right: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: has;
  -moz-scroll-snap-margin-right: has;
  -ms-scroll-snap-margin-right: has;
  scroll-snap-margin-right: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-right: invalid.path.1;
  -moz-scroll-snap-margin-right: invalid.path.1;
  -ms-scroll-snap-margin-right: invalid.path.1;
  scroll-snap-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: invalid.path.1;
  -moz-scroll-snap-margin-right: invalid.path.1;
  -ms-scroll-snap-margin-right: invalid.path.1;
  scroll-snap-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: invalid.path.1;
  -moz-scroll-snap-margin-right: invalid.path.1;
  -ms-scroll-snap-margin-right: invalid.path.1;
  scroll-snap-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: invalid.path.1;
  -moz-scroll-snap-margin-right: invalid.path.1;
  -ms-scroll-snap-margin-right: invalid.path.1;
  scroll-snap-margin-right: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-right: -54881;
  -moz-scroll-snap-margin-right: -54881;
  -ms-scroll-snap-margin-right: -54881;
  scroll-snap-margin-right: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: -54881;
  -moz-scroll-snap-margin-right: -54881;
  -ms-scroll-snap-margin-right: -54881;
  scroll-snap-margin-right: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: -42365;
  -moz-scroll-snap-margin-right: -42365;
  -ms-scroll-snap-margin-right: -42365;
  scroll-snap-margin-right: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: -42365;
  -moz-scroll-snap-margin-right: -42365;
  -ms-scroll-snap-margin-right: -42365;
  scroll-snap-margin-right: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: July;
    -moz-scroll-snap-margin-right: July;
    -ms-scroll-snap-margin-right: July;
    scroll-snap-margin-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: August;
    -moz-scroll-snap-margin-right: August;
    -ms-scroll-snap-margin-right: August;
    scroll-snap-margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: September;
    -moz-scroll-snap-margin-right: September;
    -ms-scroll-snap-margin-right: September;
    scroll-snap-margin-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-right: November;
    -moz-scroll-snap-margin-right: November;
    -ms-scroll-snap-margin-right: November;
    scroll-snap-margin-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: July;
    -moz-scroll-snap-margin-right: July;
    -ms-scroll-snap-margin-right: July;
    scroll-snap-margin-right: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: August;
    -moz-scroll-snap-margin-right: August;
    -ms-scroll-snap-margin-right: August;
    scroll-snap-margin-right: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: September;
    -moz-scroll-snap-margin-right: September;
    -ms-scroll-snap-margin-right: September;
    scroll-snap-margin-right: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-right: November;
    -moz-scroll-snap-margin-right: November;
    -ms-scroll-snap-margin-right: November;
    scroll-snap-margin-right: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: May;
    -moz-scroll-snap-margin-right: May;
    -ms-scroll-snap-margin-right: May;
    scroll-snap-margin-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: June;
    -moz-scroll-snap-margin-right: June;
    -ms-scroll-snap-margin-right: June;
    scroll-snap-margin-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: April;
    -moz-scroll-snap-margin-right: April;
    -ms-scroll-snap-margin-right: April;
    scroll-snap-margin-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-right: November;
    -moz-scroll-snap-margin-right: November;
    -ms-scroll-snap-margin-right: November;
    scroll-snap-margin-right: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: May;
    -moz-scroll-snap-margin-right: May;
    -ms-scroll-snap-margin-right: May;
    scroll-snap-margin-right: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: June;
    -moz-scroll-snap-margin-right: June;
    -ms-scroll-snap-margin-right: June;
    scroll-snap-margin-right: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-snap-margin-right: April;
    -moz-scroll-snap-margin-right: April;
    -ms-scroll-snap-margin-right: April;
    scroll-snap-margin-right: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-snap-margin-right: November;
    -moz-scroll-snap-margin-right: November;
    -ms-scroll-snap-margin-right: November;
    scroll-snap-margin-right: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-right: July;
    -moz-scroll-snap-margin-right: July;
    -ms-scroll-snap-margin-right: July;
    scroll-snap-margin-right: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: August;
    -moz-scroll-snap-margin-right: August;
    -ms-scroll-snap-margin-right: August;
    scroll-snap-margin-right: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-right: September;
    -moz-scroll-snap-margin-right: September;
    -ms-scroll-snap-margin-right: September;
    scroll-snap-margin-right: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: November;
    -moz-scroll-snap-margin-right: November;
    -ms-scroll-snap-margin-right: November;
    scroll-snap-margin-right: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-right: August;
    -moz-scroll-snap-margin-right: August;
    -ms-scroll-snap-margin-right: August;
    scroll-snap-margin-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-snap-margin-right: July;
    -moz-scroll-snap-margin-right: July;
    -ms-scroll-snap-margin-right: July;
    scroll-snap-margin-right: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: August;
    -moz-scroll-snap-margin-right: August;
    -ms-scroll-snap-margin-right: August;
    scroll-snap-margin-right: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-right: September;
    -moz-scroll-snap-margin-right: September;
    -ms-scroll-snap-margin-right: September;
    scroll-snap-margin-right: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: November;
    -moz-scroll-snap-margin-right: November;
    -ms-scroll-snap-margin-right: November;
    scroll-snap-margin-right: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-right: August;
    -moz-scroll-snap-margin-right: August;
    -ms-scroll-snap-margin-right: August;
    scroll-snap-margin-right: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-right: January;
    -moz-scroll-snap-margin-right: January;
    -ms-scroll-snap-margin-right: January;
    scroll-snap-margin-right: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: December;
    -moz-scroll-snap-margin-right: December;
    -ms-scroll-snap-margin-right: December;
    scroll-snap-margin-right: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-right: April;
    -moz-scroll-snap-margin-right: April;
    -ms-scroll-snap-margin-right: April;
    scroll-snap-margin-right: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: May;
    -moz-scroll-snap-margin-right: May;
    -ms-scroll-snap-margin-right: May;
    scroll-snap-margin-right: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-right: June;
    -moz-scroll-snap-margin-right: June;
    -ms-scroll-snap-margin-right: June;
    scroll-snap-margin-right: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-snap-margin-right: January;
    -moz-scroll-snap-margin-right: January;
    -ms-scroll-snap-margin-right: January;
    scroll-snap-margin-right: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: December;
    -moz-scroll-snap-margin-right: December;
    -ms-scroll-snap-margin-right: December;
    scroll-snap-margin-right: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-snap-margin-right: April;
    -moz-scroll-snap-margin-right: April;
    -ms-scroll-snap-margin-right: April;
    scroll-snap-margin-right: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-snap-margin-right: May;
    -moz-scroll-snap-margin-right: May;
    -ms-scroll-snap-margin-right: May;
    scroll-snap-margin-right: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-snap-margin-right: June;
    -moz-scroll-snap-margin-right: June;
    -ms-scroll-snap-margin-right: June;
    scroll-snap-margin-right: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-right: 54881;
  -moz-scroll-snap-margin-right: 54881;
  -ms-scroll-snap-margin-right: 54881;
  scroll-snap-margin-right: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: 54881;
  -moz-scroll-snap-margin-right: 54881;
  -ms-scroll-snap-margin-right: 54881;
  scroll-snap-margin-right: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: 42365;
  -moz-scroll-snap-margin-right: 42365;
  -ms-scroll-snap-margin-right: 42365;
  scroll-snap-margin-right: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: 42365;
  -moz-scroll-snap-margin-right: 42365;
  -ms-scroll-snap-margin-right: 42365;
  scroll-snap-margin-right: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-right: July;
  -moz-scroll-snap-margin-right: July;
  -ms-scroll-snap-margin-right: July;
  scroll-snap-margin-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: July;
  -moz-scroll-snap-margin-right: July;
  -ms-scroll-snap-margin-right: July;
  scroll-snap-margin-right: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: June;
  -moz-scroll-snap-margin-right: June;
  -ms-scroll-snap-margin-right: June;
  scroll-snap-margin-right: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: June;
  -moz-scroll-snap-margin-right: June;
  -ms-scroll-snap-margin-right: June;
  scroll-snap-margin-right: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollSnapMarginRight renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-snap-margin-right: DarkSlateBlue;
  -moz-scroll-snap-margin-right: DarkSlateBlue;
  -ms-scroll-snap-margin-right: DarkSlateBlue;
  scroll-snap-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: DarkSlateBlue;
  -moz-scroll-snap-margin-right: DarkSlateBlue;
  -ms-scroll-snap-margin-right: DarkSlateBlue;
  scroll-snap-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: DarkSlateBlue;
  -moz-scroll-snap-margin-right: DarkSlateBlue;
  -ms-scroll-snap-margin-right: DarkSlateBlue;
  scroll-snap-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-snap-margin-right: DarkSlateBlue;
  -moz-scroll-snap-margin-right: DarkSlateBlue;
  -ms-scroll-snap-margin-right: DarkSlateBlue;
  scroll-snap-margin-right: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
